avoid modifying range name references that are not affected, fdo#86518

Change-Id: I0822fb96ebcb30326bcdd88f3900e6e01c85bcf5